test/files/pos/t8001/Macros_1.scala
import scala.language.experimental.macros
import scala.reflect.macros.BlackboxContext

object Macros {
  def foo: Unit = macro impl
  def impl(c: BlackboxContext) = {
    import c.universe._
    q"()"
  }
}